# body-emotion-sensor

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SKILL.md  pyproject.toml
docs/: README.ja.md  README.zh-CN.md
prompts/: analysis-input-prompt-v1.md  example-openclaw-agents.md  example-openclaw-tools.md
src/body_emotion/: __init__.py  __main__.py  bootstrap.py  builtin_prompts.py  cli.py  cli_strings.py  commands.py  defaults.py  engine.py  init_prompt.py  init_prompt_en.py  interpreter.py  locale_config.py  openclaw_example_prompts.py  panel.py  panel_i18n.py  prompting.py  prompting_i18n_data.py  schema.py  schema_errors.py  store.py  workspace.py
tests/: test_engine.py
